--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -7,8 +7,8 @@ Pos=0,35
 Size=2556,1047
 
 [Window][Open##OpenFile]
-Pos=136,199
-Size=1000,424
+Pos=247,130
+Size=1000,456
 
 [Window][hPeFileContent ERROR]
 Pos=481,335
@@ -26,6 +26,18 @@ Size=777,431
 Pos=438,115
 Size=697,557
 
+[Window][Trace into]
+Pos=622,380
+Size=434,193
+
+[Window][Trace over]
+Pos=624,382
+Size=440,241
+
+[Window][Trace LBR]
+Pos=624,382
+Size=465,206
+
 [Table][0x928A56C5,4]
 RefScale=13
 Column 0  Width=49
@@ -36,9 +48,9 @@ Column 3  Width=-1
 [Table][0xEC1C56FC,6]
 RefScale=13
 Column 0  Width=49
-Column 1  Width=49
-Column 2  Width=42
-Column 3  Width=77
+Column 1  Width=112
+Column 2  Width=189
+Column 3  Width=302
 Column 4  Weight=1.0000
 Column 5  Width=4
 
@@ -70,7 +82,7 @@ Column 0  Width=63
 Column 1  Width=112
 Column 2  Width=112
 Column 3  Width=112
-Column 4  Width=112
+Column 4  Width=28
 Column 5  Width=35
 Column 6  Weight=1.0000
 Column 7  Width=-1
@@ -1263,10 +1275,10 @@ Column 2  Width=112
 Column 3  Width=42
 Column 4  Width=112
 Column 5  Width=112
-Column 6  Width=21
+Column 6  Width=109
 Column 7  Width=91
 Column 8  Width=56
-Column 9  Width=91
+Column 9  Width=77
 Column 10 Width=70
 Column 11 Width=112
 Column 12 Width=112
@@ -1277,6 +1289,58 @@ Column 16 Weight=1.0000
 Column 17 Width=-1
 
 [Table][0xAD5F5BCC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC11D54AF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB1F168AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3211C231,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE24A56A7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9240E0AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA9C28148,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x59BB329A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA7042D9F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC1C713F8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x88CB3814,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9089BF98,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC0A12ED6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9159B948,4]
 RefScale=13
 Column 0  Sort=0v
 
