--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 
 [Window][##Debugger Interface]
 Pos=0,35
-Size=2556,1047
+Size=1280,800
 
 [Window][Open##OpenFile]
-Pos=247,130
+Pos=253,132
 Size=1000,456
 
 [Window][hPeFileContent ERROR]
@@ -38,6 +38,10 @@ Size=440,241
 Pos=624,382
 Size=465,206
 
+[Window][Memory Editor]
+Pos=535,478
+Size=544,266
+
 [Table][0x928A56C5,4]
 RefScale=13
 Column 0  Width=49
@@ -49,8 +53,8 @@ Column 3  Width=-1
 RefScale=13
 Column 0  Width=49
 Column 1  Width=112
-Column 2  Width=189
-Column 3  Width=302
+Column 2  Width=210
+Column 3  Width=231
 Column 4  Weight=1.0000
 Column 5  Width=4
 
@@ -1341,6 +1345,80 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x9159B948,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB7C016D1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x61200A9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEAAFF977,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1D644E49,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB4C0B9E8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x878B2F0A,19]
+RefScale=13
+Column 0  Width=119
+Column 1  Width=14
+Column 2  Width=14
+Column 3  Width=14
+Column 4  Width=14
+Column 5  Width=14
+Column 6  Width=14
+Column 7  Width=14
+Column 8  Width=14
+Column 9  Width=14
+Column 10 Width=14
+Column 11 Width=14
+Column 12 Width=14
+Column 13 Width=14
+Column 14 Width=14
+Column 15 Width=14
+Column 16 Width=14
+Column 17 Width=35
+Column 18 Width=35
+
+[Table][0x604ABA5A,4]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=28
+Column 2  Weight=1.0000
+Column 3  Width=-1
+
+[Table][0x6351C09F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCA651F01,6]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=210
+Column 3  Width=295
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0xB5B1DCD4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7E4A0EE3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2E629FAD,4]
 RefScale=13
 Column 0  Sort=0v
 
